# SCRCPY-macUI

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  install-scrcpy-mac-ui.skill  package.json  vite.config.ts
docs/: ARCHITECTURE.md  PRD.md
scripts/: dev.sh  package.sh
src/: App.tsx  FloatPanel.tsx  Launcher.tsx  backend.ts  device.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb.rs  error.rs  keyinject.rs  lib.rs  main.rs  scrcpy.rs  winbounds.rs
src/store/: settings.ts
src/test/: FloatPanel.test.tsx  Launcher.test.tsx  device.test.ts  settings.test.ts
